--- a/gb/17/3/2/n8866965.md
+++ b/gb/17/3/2/n8866965.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陈梦家——为传统汉字殒命的悲壮文人</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/03/Chen_Mengjia.jpg" />
-<h6>“新月派”诗人、古文字专家陈梦家。（网路图片）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2017年03月03日讯】（大纪元记者叶蓁报导）这是一位与汉字有着不解之缘的乱世才子。曾经的他浪漫潇洒，以笔墨作针线、汉字作珠玉，串连成含蓄优美的“新月派”诗歌；后来的他严谨治学，钻进浩如烟海的古籍世界，探寻枯涩艰深的古文字之谜。</p>
-<p>再后来，他为之耗费无数心血的中国字，面临消亡之劫。他出于一个炎黄子孙捍卫民族文化的使命感，四处奔走向当局政府呼吁。因文字成名的他，却因文字获罪。在历经一次次批判与打压的折磨后，他不堪受辱，愤然了结性命，与博大精深的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B1%89%E5%AD%97.md#1">传统汉字</a>，一同亡于当权者之手。</p>
-<p>今天的中国大陆，几乎看不到<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B1%89%E5%AD%97.md#1">传统汉字</a>——正体字的踪迹，也鲜有人会提起国学大师——<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%99%88%E6%A2%A6%E5%AE%B6.md#1">陈梦家</a>的名字。</p>
-<figure id="attachment_8866985" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-8866985 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/03/e2ad6d8014819a2dad485a2ca16ca900-450x310.jpg" alt="1947年，陈梦家（左）、赵萝蕤（中）夫妇与家人在美国合影。（网路图片）" width="450" b="310" /><figcaption class="wp-caption-text">1947年，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%99%88%E6%A2%A6%E5%AE%B6.md#1">陈梦家</a>（左）、赵梦蕤（中）夫妇与家人在美国合影。（网路图片）</figcaption></figure>
+	<p>【大纪元2017年03月03日讯】（大纪元记者叶蓁报导）这是一位与汉字有着不解之缘的乱世才子。曾经的他浪漫潇洒，以笔墨作针线、汉字作珠玉，串连成含蓄优美的“新月派”诗歌；后来的他严谨治学，钻进浩如烟海的古籍世界，探寻枯涩艰深的古文字之谜。</p>
+<p>再后来，他为之耗费无数心血的中国字，面临消亡之劫。他出于一个炎黄子孙捍卫民族文化的使命感，四处奔走向当局政府呼吁。因文字成名的他，却因文字获罪。在历经一次次批判与打压的折磨后，他不堪受辱，愤然了结性命，与博大精深的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B1%89%E5%AD%97.md#1">传统汉字</a>，一同亡于当权者之手。</p>
+<p>今天的中国大陆，几乎看不到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%B1%89%E5%AD%97.md#1">传统汉字</a>——正体字的踪迹，也鲜有人会提起国学大师——<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%88%E6%A2%A6%E5%AE%B6.md#1">陈梦家</a>的名字。</p>
+<figure id="attachment_8866985" aria-describedby="caption-attachment-8866985" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/03/e2ad6d8014819a2dad485a2ca16ca900-450x310.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8866985 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/03/e2ad6d8014819a2dad485a2ca16ca900-450x310.jpg" alt="1947年，陈梦家（左）、赵萝蕤（中）夫妇与家人在美国合影。（网路图片）" width="450" b="310" /></a><figcaption id="caption-attachment-8866985" class="wp-caption-text">1947年，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%88%E6%A2%A6%E5%AE%B6.md#1">陈梦家</a>（左）、赵梦蕤（中）夫妇与家人在美国合影。（网路图片）</figcaption></figure>
 <p><strong>长衫落拓美少年</strong></p>
 <p>陈梦家于1911年出生于一个神学家庭，在中式传统教育和西方宗教氛围中度过童年，对中国诗歌有浓厚兴趣。1927年，陈梦家就读于南京中央大学的法律系，虽然后来取得律师执照，却没当过一天律师。以新诗为媒，他在学校里结识大诗人闻一多和徐志摩，并长期与他们保持着亦师亦友的关系，其诗歌水平也随之突飞猛进。</p>
 <p><em>“一朵野花在荒原里开了又落了，不想这小生命，向着太阳发笑，上帝给他的聪明他自己知道，他的欢喜，他的诗，在风前轻摇。”（陈梦家《一朵野花》）</em></p>
@@ -20,7 +19,7 @@
 <p>后来，陈梦家在燕京大学宗教学院读研究生专业，很快又转攻古文字学——只因他对中国上古神秘的宗教文化抱有极大的好奇心。他把所有精力投注于古文字学和古史学方面，仅1936年便发表《古文字中的商周祭祀》《商代的神话与巫术》等7篇论文。</p>
 <p>在燕大读书，陈梦家收获的不仅仅是学业，还有人生。他与才女校花赵萝蕤相识，相同的神学家庭背景和文学修养，让两人一见如故。1936年1月，他们在校长办公室举行了简单的结婚仪式。</p>
 <p>“七七事变”爆发后，这对璧人被迫迁离北京，辗转于长沙、香港、昆明等地，在西南联大暂时栖身。直至1944年，经美国汉学家费正清和清华教授金岳霖介绍，陈梦家越洋赴芝加哥大学教授中国古文学，随行的赵萝蕤也在该校攻读美国文学专业的博士生课程。</p>
-<figure id="attachment_8866988" style="width: 415px" class="wp-caption aligncenter"><img class="size-full wp-image-8866988" src="https://i.epochtimes.com/assets/uploads/2017/03/356fea2d14be6f8a86f57f831fc10840.jpg" alt="陈梦家、赵萝蕤夫妇（前排）与家人合影。（网路图片）" width="415" b="298" /><figcaption class="wp-caption-text">陈梦家、赵萝蕤夫妇（前排）与家人合影。（网路图片）</figcaption></figure>
+<figure id="attachment_8866988" aria-describedby="caption-attachment-8866988" style="width: 415px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/03/356fea2d14be6f8a86f57f831fc10840.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-8866988" src="https://i.epochtimes.com/assets/uploads/2017/03/356fea2d14be6f8a86f57f831fc10840.jpg" alt="陈梦家、赵萝蕤夫妇（前排）与家人合影。（网路图片）" width="415" b="298" /></a><figcaption id="caption-attachment-8866988" class="wp-caption-text">陈梦家、赵萝蕤夫妇（前排）与家人合影。（网路图片）</figcaption></figure>
 <p><strong>一身诗意付金石</strong></p>
 <p>虽然在美国教授文学，陈梦家已逐渐从文人向古文字专家转变。执教期间，他致力于收集、汇整流散于美国的古代铜器，几乎走访美国所有藏有铜器的人家、博物馆乃至古董商铺。他以惊人的毅力与学力，编纂殷周铜器集录，为研究中国铜器留下宝贵材料。</p>
 <p>1947年，陈梦家怀着报国理想回国，在清华中文系执教，同时坚持古文字学、西周铜器等文字学与史学研究。次年，赵萝蕤取得博士学位后返国团聚，任燕京大学西语系主任。这对乱世中的学者夫妻暂时过上稳定平静的生活。</p>
@@ -31,7 +30,7 @@
 <p>1952年，运动刚结束，中共又在全国展开高校的院系调整，陈梦家被分配到社科院考古研究所，妻子赵萝蕤转入北大西语系任教授。</p>
 <p>“诗家不幸史家幸。”在考古所的最初几年，陈梦家的生活相对平静，在考古方面的学术研究建树颇丰。他借鉴西方学术规范，先后完成《殷墟卜辞综述》《西周铜器断代》《尚书通论》等专著，成为名副其实的古文字、考古学大师。1956年，陈梦家还用丰厚的稿费购置一套四合院，每天在家工作超过10个小时。他还热衷于购置明清家具，在家中悉心收藏、展示，被朋友戏称“比博物馆还博物馆”。</p>
 <p>他却从此搁置诗笔，鲜有文学创作。严苛的政治环境，是扼杀诗魂与灵感的最大杀手，陈梦家的浪漫诗风已被主流文学抛弃，他只得选择缄口不言，把所有精力灌注到遥远的古代世界。</p>
-<figure id="attachment_8866995" style="width: 245px" class="wp-caption aligncenter"><img class="size-full wp-image-8866995" src="https://i.epochtimes.com/assets/uploads/2017/03/31b07bcb4b7d9de9588f2a568a83cdd3.jpg" alt="陈梦家著作《中国文字学》。（网路图片）" width="245" b="372" /><figcaption class="wp-caption-text">陈梦家著作《中国文字学》（网路图片）</figcaption></figure>
+<figure id="attachment_8866995" aria-describedby="caption-attachment-8866995" style="width: 245px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/03/31b07bcb4b7d9de9588f2a568a83cdd3.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-8866995" src="https://i.epochtimes.com/assets/uploads/2017/03/31b07bcb4b7d9de9588f2a568a83cdd3.jpg" alt="陈梦家著作《中国文字学》。（网路图片）" width="245" b="372" /></a><figcaption id="caption-attachment-8866995" class="wp-caption-text">陈梦家著作《中国文字学》（网路图片）</figcaption></figure>
 <p><strong>不知言路成绝路</strong></p>
 <p>1956年，中共在大陆实行“百花齐放、百家争鸣”的政策，次年发出《关于整风运动的指示》，鼓励“大鸣大放”，制造出政治气氛变暖的假象。陈梦家与其他知识分子一样，以为中共真心纳谏，欲将多年前想提而不敢提的意见真诚吐露。</p>
 <p>1935年，中华民国曾公布300多个简体字表，推广汉字改革。因遭到社会人士反对，国民政府便于次年下令停止推行。一心毁灭中国文化的中共，从成立之初就逆势而行，逐步毁灭承载着中华文明的传统汉字。中共先将汉字歪曲成“横亘在群众和新文化之间的‘长城’”，又在1930年编造一套适用拉丁字母的中文系统。1936年，毛泽东更对记者公开表示，中文字母化是不可避免的趋势。</p>
@@ -41,7 +40,7 @@
 <p>5月17日，陈梦家继续为保护正体字发声，在《文汇报》发表文章《慎重一点“改革”汉字》。他却不知道，就在两天前，毛泽东写下《事情正在起变化》，发出打击右派的信号。这样，陈梦家关于反对汉字改革的言论，成为他在“反右斗争”中被批判的最大证据。</p>
 <p>陈梦家被划为右派后，学术活动完全停止，在单位里遭到“降薪停职使用”的处罚，在社会上更要忍受一众学者的联合批判。从此，等待他的是参加不完的批斗会、做不完的自我检讨。陈梦家承受着巨大的精神压力，变得情绪低落，身形消瘦；赵萝蕤因无法承受突如其来的灾祸，患上精神分裂症。偏偏这时，在1958年12月，陈梦家被下放到河南农村接受劳动改造，一代古文字专家只能做些种田、踩水车之类的农活。</p>
 <p>直到1960年，陈梦家才重新回考古所，受副所长、他的朋友夏鼐照顾，调往兰州整理汉简，成为他不幸生活的一次大幸。在那里，陈梦家专注考古研究，以超乎寻常的才华完成《武威汉简》《汉简缀述》两书。两年后，他又回到考古所。虽然后来摘掉“右派”帽子，但是遭受过两次运动迫害的他仍然心有余悸，遂一心扑在考古研究中。</p>
-<figure id="attachment_8866990" style="width: 223px" class="wp-caption aligncenter"><img class="size-full wp-image-8866990" src="https://i.epochtimes.com/assets/uploads/2017/03/245af2c04d2eef3512b2958bf5c04c07.jpg" alt="陈梦家、赵萝蕤夫妇合影。（网路图片）" width="223" b="350" /><figcaption class="wp-caption-text">陈梦家、赵萝蕤夫妇合影（网路图片）</figcaption></figure>
+<figure id="attachment_8866990" aria-describedby="caption-attachment-8866990" style="width: 223px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/03/245af2c04d2eef3512b2958bf5c04c07.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-8866990" src="https://i.epochtimes.com/assets/uploads/2017/03/245af2c04d2eef3512b2958bf5c04c07.jpg" alt="陈梦家、赵萝蕤夫妇合影。（网路图片）" width="223" b="350" /></a><figcaption id="caption-attachment-8866990" class="wp-caption-text">陈梦家、赵萝蕤夫妇合影（网路图片）</figcaption></figure>
 <p><strong>两度求死浩劫中</strong></p>
 <p>文革的爆发，堵死了他的最后一条出路。1966年8月，陈梦家第三次被中共“批斗”，也是最悲惨的一次，直接导致他的自杀悲剧。</p>
 <p>陈梦家在文革中被划为“资产阶级反动学术权威”，重新被揪出批判、斗争。作为考古所的领导，夏鼐目睹陈梦家遭受迫害的经历，并在日记中留下第一手资料。考古所成立了监督小组，每天强制陈梦家与其他“反动分子”上午劳动，下午写检查。烈日当头时，他被迫长时间跪在院子里，有人往他身上扔脏东西，甚至吐口水。</p>
@@ -57,49 +56,46 @@
 2.刘宜庆，《陈梦家和赵萝蕤的葳蕤人生》，《名人传记（上半月）》，2010年第10期。<br />
 3.汤志辉，《“运动”中的陈梦家》，《粤海风》，2015年第3期。 ＃</p>
 <p>责任编辑：张宪义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/2/25/n8849172.md#1">文革 “破四旧” 摧折华夏文明</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/2/21/n8835483.md#1">中共封锁大饥荒消息 剥夺农民求生权</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/2/8/n8788821.md#1">大饥荒死亡人数或超四千万 中共内部数据泄密</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/1/12/n8695945.md#1">高天韵：反右运动——浸血的世界纪录</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/3/23/n4668904.md#1">墓碑——大饥荒纪实</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/5/15/n3871850.md#1">【传奇人物】一代才女赵萝蕤</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/12/28/n3125749.md#1">林辉：正体汉字为何在台湾得以保留？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/8/18/n2999315.md#1">为汉字而死的国学大师—陈梦家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/8/18/n2999315.md#1">为汉字而死的国学大师—陈梦家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/12/28/n3125749.md#1">林辉：正体汉字为何在台湾得以保留？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/5/15/n3871850.md#1">【传奇人物】一代才女赵萝蕤</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/23/n4668904.md#1">墓碑——大饥荒纪实</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3963792.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（1）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/2/n8866965.htm">陈梦家——为传统汉字殒命的悲壮文人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/2/n8866965.htm">陈梦家——为传统汉字殒命的悲壮文人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/17/3/2/n8866965.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/3/2/n8866965.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
